# BF-Marketplace

./: .gitignore  LICENSE  Market.cid  Minter.cid  README.md  hie.yaml  property-sale.cabal
app/: Buyer-Client.hs  PAB.hs  Seller-Client.hs
bora-finance-svc/: README.md
bora-finance-svc/service/: service.go
bora-finance-svc/static/: header.html
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4/: package.cache  property-sale-0.1.0.0-inplace.conf
dist-newstyle/packagedb/ghc-8.10.4.20210212/: package.cache  property-sale-0.1.0.0-inplace.conf
dist-newstyle/src/: Win32-net_-5b9448ed2f179086.cache  cardano-b_-c8db9876882556ed.cache  cardano-c_-6913fd4f4ef86015.cache  cardano-l_-48e3a74bf8b61f34.cache  cardano-n_-f77532c42500fe62.cache  cardano-p_-cae013aee062332a.cache  flat-3cb8c450312dfc1f.cache  goblins-67efee8d68d79164.cache  hedgehog-_-586c3da22a5ce29b.cache  iohk-moni_-1defcf7452717dc5.cache  ouroboros_-e51b1e265e7bb521.cache  plutus-3214de3b8d8ae7cc.cache  purescrip_-dbf3a2a8ca5c958c.cache  servant-p_-2a9020fb8c4044b3.cache
src/: BoraMarket.hs  MarketPlace.hs  PSTest.hs  Percentage.hs  PropertySale-PAB.hs  PropertySale-Test.hs  PropertySale.hs  PropertySaleFunds.hs  PropertySalePAB.hs  PropertySaleTest.hs
src/MarketPlace/: MarketPlace.hs
